<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_239sdp"
                android:layout_height="@dimen/_83sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:src="@drawable/header" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/app_name"
                android:textColor="@color/menu_text"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/main_discription"
                android:textColor="@color/menu_text2"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/bg_color"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="5">


            <com.screen.share.newone.customviews.MyCardView
                android:id="@+id/btnHost"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:onClick="onHostClick"
                app:option_icon="@drawable/host"
                app:option_text="@string/host" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".8"/>
            <com.screen.share.newone.customviews.MyCardView
                android:id="@+id/btnClient"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:onClick="onClientClick"
                app:option_icon="@drawable/client"
                app:option_text="@string/client" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="center"
            android:weightSum="5">

            <com.screen.share.newone.customviews.MyCardView
                android:id="@+id/btnRate"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:onClick="onShareClick"
                app:option_icon="@drawable/share"
                app:option_text="@string/share" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".8"/>
            <com.screen.share.newone.customviews.MyCardView
                android:id="@+id/btnShare"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:onClick="onRateUsClick"
                app:option_icon="@drawable/rate"
                app:option_text="@string/rate" />

        </LinearLayout>

    </LinearLayout>
    <include layout="@layout/layout_banner" />

</LinearLayout>
