<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="6"
    android:orientation="vertical"
    tools:context="com.screen.share.newone.activity.Privacy_policy">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:fontFamily="@font/robot_bold"
        android:gravity="center"
        android:text="@string/Terms_conditions"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robot_bold"
            android:gravity="center_horizontal"
            android:text="@string/following_permissions"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_12sdp" />


        <CheckBox
            android:id="@+id/checkbox_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/read_Terms"
            android:textColor="@color/red" />
    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_progress"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="@dimen/_110sdp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"

        android:adjustViewBounds="true"
        android:visibility="gone"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/checked" />


</LinearLayout>