<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_host"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="com.screen.share.newone.activity.HostActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_weight="3">

        <ImageView
            android:id="@+id/wifi"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:src="@drawable/wifi" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_5sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/wifitext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_toEndOf="@id/wifi"
                android:text="WIFI"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                android:fontFamily="@font/robot_bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/wifitext"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/wifi_info"
                android:textAlignment="textStart"
                android:fontFamily="@font/robot_medium"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ip_address"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/robot_bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight=".9"
                android:layout_marginLeft="@dimen/_40sdp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_ip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_margin_extra_small"
                    android:text="192.168.10.30"
                    android:fontFamily="@font/robot_medium"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_margin_extra_small"
                    android:text=":" />

                <TextView
                    android:id="@+id/tv_port"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="8080"
                    android:fontFamily="@font/robot_medium"
                     />
                <ImageView
                    android:id="@+id/iv_refresh"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:clickable="true"
                    android:contentDescription="@string/refresh"
                    android:focusable="true"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:onClick="onRefreshClick"
                    android:src="@drawable/refresh" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight=".1">


            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_margin_small"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_margin_extra_small"
                android:text="Pin"
                android:fontFamily="@font/robot_medium"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_margin_extra_small"
                android:text=":"
                android:fontFamily="@font/robot_medium"
                />

            <TextView
                android:id="@+id/tv_pin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_weight="1"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btnstartHosting"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/enable_button_mine"
            android:onClick="onHostingClick"
            android:text="@string/start_hosting"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_10sdp" />

        <Button
            android:id="@+id/btnstartRecording"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:background="@drawable/enable_button_mine"
            android:onClick="onRecordingClick"
            android:text="@string/start_recording"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_10sdp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <EditText
            android:id="@+id/etIP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/portHint"
            android:inputType="number" />
        <EditText
            android:id="@+id/etPort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/portnumber"
            android:inputType="number" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnShareAudio"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/enable_button_mine"
            android:onClick="connect"
            android:text="@string/share_audio"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_10sdp" />
    </LinearLayout>

    <include layout="@layout/layout_banner_large" />
</LinearLayout>