<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="com.screen.share.newone.activity.ClientActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="3">

        <ImageView
            android:layout_width="@dimen/_239sdp"
            android:layout_height="@dimen/_83sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:src="@drawable/header" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/app_name"
            android:textColor="@color/menu_text"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/main_discription"
            android:textColor="@color/menu_text2"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/enter_ip_address"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorBlack" />

        <ImageView
            android:id="@+id/btnclientQr"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:src="@drawable/ic_qrcode_24dp"
            android:tint="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_10sdp">

            <EditText
                android:id="@+id/et_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="192"
                android:text="192"
                android:inputType="number"
                android:maxLength="3"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="."
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="168"
                android:hint="168"
                android:inputType="number"
                android:maxLength="3"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="."
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="10"
                android:text="137"
                android:inputType="number"
                android:maxLength="3"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="."
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="1"
                android:text="75"
                android:inputType="number"
                android:maxLength="3"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/et_5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="8080"
                android:text="8080"
                android:inputType="number"
                android:maxLength="4"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorBlack" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="@string/go"
                android:onClick="onGoClick"
                android:background="@drawable/enable_button_mine"
                android:textColor="@color/colorWhite"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="@string/share_audio"
                android:onClick="connect"
                android:background="@drawable/enable_button_mine"
                android:textColor="@color/colorWhite"/>

            <!-- <com.screen.share.newone.customviews.MyCardView
                 android:id="@+id/btnGo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="onGoClick" />-->
        </LinearLayout>


    </LinearLayout>

    <include layout="@layout/layout_banner" />

</LinearLayout>